--- a/src/components/index.css
+++ b/src/components/index.css
@@ -1,3 +1,6 @@
 @import "./Element";
 @import "./ListOfElements";
 @import "./Button";
+@import "./Menu";
+@import "./Article";
+@import "./ListOfArticles";
