--- a/src/components/index.css
+++ b/src/components/index.css
@@ -4,3 +4,5 @@
 @import "./Menu";
 @import "./Article";
 @import "./ListOfArticles";
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
