Refactor css to responsive

--- a/src/components/Article/index.css
+++ b/src/components/Article/index.css
@@ -1,3 +1,15 @@
 .article {
-    @apply border p-2 w-full my-2 hover:cursor-pointer
+    @apply  p-4
+    w-full
+    my-3
+    sm:my-12
+    hover:cursor-pointer 
+    hover:bg-gray-400  
+    sm:hover:bg-opacity-50
+    font-Montserrat 
+    text-xl
+    sm:ease-out
+    sm:duration-300
+    active:bg-gray-400
+    active:bg-opacity-50
 }
