--- a/src/components/Menu/index.css
+++ b/src/components/Menu/index.css
@@ -1,3 +1,22 @@
 .menu {
-    @apply border border-white h-screen w-56 ml-5 flex items-center
+    @apply
+    bg-white
+    bg-opacity-10
+    border-opacity-5
+    shadow-md
+    backdrop-blur
+    sm:h-screen
+    sm:w-80 
+    sm:ml-10 
+    flex
+    sm:flex-col
+    flex-row
+    items-center
 }
+
+/* From https://css.glass */
+/* bg-white + bg-opacity-30  = background: rgba(255, 255, 255, 0.30); */
+/* border-radius: 16px; */
+/* shadow-md  = box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);*/
+/* backdrop-blur = backdrop-filter: blur(8px); */
+/* border + border-opacity-5 = border: 1px solid rgba(255, 255, 255, 0.5); */
